# muslimtify

./: .clangd  .gitattributes  .gitignore  AGENTS.md  AI_POLICY.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  bump-version.sh  cli-redesign.md  install.sh  uninstall.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.packages/: README.md  check-versions.sh  refresh-aur-hash.sh
assets/: muslimtify.desktop
docs/: METHOD_TOLERANCES.md
include/: audio.h  cache.h  check_cycle.h  cli_internal.h  config.h  country.h  daemon_loop.h  display.h  gui.h  location.h  notification.h  platform.h  platform_native.h  prayer_checker.h  prayertimes.h  toast_activator.h  util.h
scripts/: gen-windows-zones.ps1
src/: cli.c  cmd_daemon.c  cmd_run.c  gui.c  json.h  muslimtify.c  muslimtify_gui.c  string_util.h
src/gui/: CMakeLists.txt
src/gui/app/: app.c  app.h  assets.c  assets.h
src/gui/components/: calculation_profile_card.c  daily_schedule.c  dashboard_content.c  dashboard_content.h  navigation.c  navigation.h  prayer_card.c  topbar.c  topbar.h
src/gui/components/dashboard/: calculation_profile_card.c  daily_schedule.c  dashboard_content.c  prayer_card.c
src/gui/components/settings/: prayer_setting.c  prayer_setting.h
src/gui/helper/: country_name.h  method_description.h
src/gui/resources/shaders/: space.fs
src/gui/themes/: assets.h  colors.h  fonts.h
src/gui/utils/: gui_config.c  gui_config.h  gui_prayer.c  gui_prayer.h  strfmt.c  strfmt.h
systemd/: muslimtify.service
tests/: test_cache.c  test_check_cycle.c  test_cli.c  test_cmd_daemon_win.c  (+10 more)
(+56 files in other folders)
